Fix a compiler assertion